fixing fix for overflowing text on mini-cart product description

--- a/skin/frontend/enterprise/bootstrap/css/style.css
+++ b/skin/frontend/enterprise/bootstrap/css/style.css
@@ -662,7 +662,7 @@ body[class*='checkout'] #header-checkoutBtn { /* hides just on checkout pages */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 350px; /* whatever width */
+    width: 250px;
 }
  	
 .btn-continue {
